# jouster-assignment

./: Readme.md  docker-compose.yml
llm-extracter/: Dockerfile  Makefile  pyproject.toml
llm-extracter-frontend/: Dockerfile  index.html  package-lock.json  package.json
llm-extracter-frontend/src/: App.jsx
llm-extracter-frontend/src/components/: Layout.jsx  SearchAnalyses.jsx  TextAnalyzer.jsx
llm-extracter-frontend/src/services/: api.js
llm-extracter/app/: main.py
llm-extracter/app/config/: db.py  properties.py
llm-extracter/app/entities/: analysis.py
llm-extracter/app/routers/: api.py
llm-extracter/app/schemas/: schemas.py
llm-extracter/app/services/: services.py
llm-extracter/app/utils/: utils.py
